# timedctl

./: .gitlab-ci.yml  .releaserc  CHANGELOG.md  Makefile  README.md  flake.nix  pyproject.toml
.github/: CODEOWNERS  conventional-commits.yml  dependabot.yml
.github/workflows/: alexjs.yaml  alexjs.yml  aur-release.yml  conventional-commits.yaml  conventional-commits.yml  go-semantic-release.yml  linting.yml  poetry-release.yml  pylint.yml  python-semantic-release.yml  ruff.yaml  semantic-release.yaml  semantic-release.yml
aur/: .SRCINFO  PKGBUILD
tests/: test_activities.py  test_get.py
timedctl/: _config.py  cli.py  helpers.py  http_cache.sqlite  timedctl.py
