[tool.poetry]
name = "timedctl"
version = "5.9.0"
description = "CLI for timed"
authors = ["Arthur Deierlein <arthur.deierlein@adfinis.com>", "Gian Klug <gian.klug@adfinis.com>"]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyfzf = "^0.3.1"
rich = "^13.4.2"
tomlkit = ">=0.11.8,<0.13.0"
click-aliases = "^1.0.1"
libtimed = "^0.6.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
ruff = "v0.1.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timedctl = "timedctl.cli:timedctl"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
build_command = "pip install poetry && poetry build"

[tool.ruff]
# TODO: add "ANN" again in the future
select = ["E", "F", "C4", "PL", "C90", "I", "N", "UP", "B", "S", "A",  "COM", "PT", "Q", "T20", "SLF", "TD", "FIX",  "PIE"]
# same as black
line-length = 88
output-format = "github"
fixable = ["ALL"]
# ignore these for now
ignore = ["PLR0913"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
