[tool.poetry]
name = "timedctl"
version = "5.10.1"
description = "CLI for timed"
authors = [
    "Arthur Deierlein <arthur.deierlein@adfinis.com>",
    "Gian Klug <gian.klug@adfinis.com>",
]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyfzf = "^0.3.1"
rich = "^13.4.2"
tomlkit = ">=0.11.8,<0.13.0"
click-aliases = "^1.0.1"
libtimed = "^0.6.4"
keyring = ">=24.1,<26.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2,<9.0.0"
isort = "^5.12.0"
ruff = "v0.3.4"
pytest-cov = ">=4.1,<6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timedctl = "timedctl.cli:timedctl"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
major_on_zero = false
branch = "main"
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# TODO: add "ANN" again in the future
select = [
    "E",
    "F",
    "C4",
    "PL",
    "C90",
    "I",
    "N",
    "UP",
    "B",
    "S",
    "A",
    "COM",
    "PT",
    "Q",
    "T20",
    "SLF",
    "TD",
    "FIX",
    "PIE",
]
fixable = ["ALL"]
ignore = [
    # make docstrings optional
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D211",
    "D213",
    "RUF012",
    # line length is handled by formatter
    "E501",
    # disable this for now
    "SLF001",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    # this conflicts for some reason
    "D203"
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
